# logic-haskell

./: README.md  logic.cabal
src/: Main.hs
