name:                logic
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/roninbar/logic#readme
license:             BSD3
license-file:        LICENSE
author:              Ron Inbar
maintainer:          example@example.com
copyright:           2022 Ron Inbar
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable logic
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
